--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "@aurelia/router": "latest"
   },
   "devDependencies": {
-    "eslint": "^9.17.0",
-    "globals": "^15.14.0",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0",
     "@aurelia/testing": "latest",
-    "stylelint": "^16.12.0",
-    "stylelint-config-standard": "^36.0.1",
+    "stylelint": "^16.21.1",
+    "stylelint-config-standard": "^38.0.0",
     "@aurelia/vite-plugin": "latest",
-    "vite": "^6.0.3",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "@types/node": "^22.10.2",
-    "typescript": "^5.7.2",
+    "vite": "^7.0.2",
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "@types/node": "^24.0.10",
+    "typescript": "^5.8.3",
     "tslib": "^2.8.1",
-    "typescript-eslint": "^8.18.1"
+    "typescript-eslint": "^8.35.1"
   },
   "scripts": {
     "lint:js": "eslint src",
@@ -33,10 +33,5 @@
     "start": "vite",
     "build": "vite build"
   },
-  "type": "module",
-  "overrides": {
-    "vite-plugin-node-polyfills": {
-      "vite": "^6.0.0"
-    }
-  }
+  "type": "module"
 }
